fix dm layout 수정

--- a/dm.html
+++ b/dm.html
@@ -74,6 +74,8 @@
         <!-- 우측 채팅 박스 -->
         <div class="chat_box" id="chat_box">
             <div class="chat_list" id="chat_list">
+            <div id="not_chat_info" class="not_chat_info">선택 되신 채팅방이 없습니다.</div>
+                <!---
                 <div class="target_user">
                     <div class="target_user_id">송혜교</div>
                     <div class="target_user_chat">반갑습니다!</div>
@@ -95,11 +97,12 @@
                     <div class="target_user_chat">동해물과 백두산이 마르고 닳도록 하나님이 보우하사 우리 나라만세 무궁화 삼천리 화려강산 대한사람 대한으로 기리 보전하세
                     </div>
                 </div>
+            </div> -->
             </div>
             <div class="chat_input" id="input-message">
                 <form id="form">
                     <input type="text" name="message" placeholder="메세지를 입력하세요">
-                </form>
+                </form> 
             </div>
         </div>
 
