--- a/nav.html
+++ b/nav.html
@@ -25,7 +25,7 @@
                 <input name="search" id="words_for_search" type="text" placeholder="Petrasche">
                 <button class="serch_button" type="button" onclick="search(this)">검색</button>
             </div>
-            <div class="user_info">
+            <div class="user_infos">
                 <div onclick="DM()" id="dm" class="dm">
                     <img id='n_profile_pic'
                         src="https://image.shutterstock.com/z/stock-vector-animal-dog-paw-print-isolated-silhouette-vector-illustration-1499728328.jpg"
