--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
                 </div>
             </div>
         </div>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
         <script src="./static/js/urls.js"></script>
         <script src="/static/js/refresh.js"></script>
         <script src="/static/js/hashtag.js"></script>
