--- a/login.html
+++ b/login.html
@@ -43,6 +43,7 @@
             </div>
         </div>
     </div>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="./static/js/urls.js"></script>
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>  
     <script src="./static/js/kakao.js"></script>
