main_api에 유저세션 추가

--- a/dm.html
+++ b/dm.html
@@ -74,7 +74,7 @@
         <!-- 우측 채팅 박스 -->
         <div class="chat_box" id="chat_box">
             <div class="chat_list" id="chat_list">
-            <div id="not_chat_info" class="not_chat_info">선택 되신 채팅방이 없습니다.</div>
+                <div id="not_chat_info" class="not_chat_info">선택 되신 채팅방이 없습니다.</div>
                 <!---
                 <div class="target_user">
                     <div class="target_user_id">송혜교</div>
@@ -102,7 +102,7 @@
             <div class="chat_input" id="input-message">
                 <form id="form">
                     <input type="text" name="message" placeholder="메세지를 입력하세요">
-                </form> 
+                </form>
             </div>
         </div>
 
@@ -112,6 +112,7 @@
 </body>
 
 </html>
+<script src="./static/js/main_api.js"></script>
 <script src="./static/js/search.js"></script>
 <script src="./static/js/urls.js"></script>
 <script src="/static/js/dm.js"></script>
