--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     뽐뽐뽐
                 </div>
             </div>
-            
+
             <div class="right_section">
                 <h1 class="top_title">인기 게시물</h1>
                 <div id="top_article" class="top_article">
@@ -159,6 +159,7 @@
             </div>
         </div>
         <script src="./static/js/urls.js"></script>
+        <script src="./static/js/dmapi.js"></script>
         <script src="/static/js/refresh.js"></script>
         <script src="/static/js/hashtag.js"></script>
         <script src="/static/js/main_api.js"></script>
