url에서 유저 셰션 받아오기

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <script src="https://kit.fontawesome.com/0e01622099.js" crossorigin="anonymous"></script>
     <title>Petrasche | Main</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="./static/js/dmapi.js"></script>
+    <script src="./static/js/urls.js"></script>
+
 
 </head>
 
@@ -159,8 +162,7 @@
             </div>
         </div>
         <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-        <script src="./static/js/urls.js"></script>
-        <script src="./static/js/dmapi.js"></script>
+        <!-- <script src="./static/js/urls.js"></script> -->
         <script src="/static/js/refresh.js"></script>
         <script src="/static/js/hashtag.js"></script>
         <script src="/static/js/main_api.js"></script>
