--- a/signup.html
+++ b/signup.html
@@ -11,7 +11,7 @@
     <!------CSS---------->
     <link rel="stylesheet" type="text/css" href="./static/css/login.css">
     <!------JS---------->
-    <script src="./static/js/api.js"></script>
+    <script src="./static/js/user_api.js"></script>
 
 
 </head>
