--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     <link rel="stylesheet" href="/static/css/main_style.css">
     <link rel="stylesheet" href="/static/css/layout.css">
     <link rel="stylesheet" href="/static/css/hashtag.css">
+    <link rel="stylesheet" href="/static/css/modal.css">
+    <link rel="stylesheet" href="/static/css/nav.css">
+
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="shortcut icon" type="image/x-icon" href="static\petrasche_배경좁게.ico" />
     <script src="https://kit.fontawesome.com/0e01622099.js" crossorigin="anonymous"></script>
     <title>Petrasche | Main</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="./static/js/dmapi.js"></script>
-    <script src="./static/js/urls.js"></script>
 
 
 </head>
@@ -161,8 +162,11 @@
                 </div>
             </div>
         </div>
+        <script src="./static/js/dmapi.js"></script>
+        <script src="./static/js/urls.js"></script>
         <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-        <!-- <script src="./static/js/urls.js"></script> -->
+        <script src="./static/js/user_api.js"></script>
+        <script src="/static/js/article.js"></script>
         <script src="/static/js/refresh.js"></script>
         <script src="/static/js/hashtag.js"></script>
         <script src="/static/js/main_api.js"></script>
