--- a/mypage.html
+++ b/mypage.html
@@ -9,17 +9,28 @@
     <title>mypage | Petrasche</title>
 
     <!------CSS---------->
+
     <link rel="stylesheet" type="text/css" href="./static/css/mypage.css">
     <link rel="stylesheet" type="text/css" href="./static/css/hashtag.css">
-
+    <link rel="stylesheet" type="text/css" href="./static/css/modal.css">
+    <link rel="stylesheet" type="text/css" href="./static/css/nav.css">
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Batang&display=swap" rel="stylesheet">
     <script src="https://use.fortawesome.com/99966411.js"></script>
     <script src="https://kit.fontawesome.com/0e01622099.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="./static/js/urls.js"></script>
 </head>
 
 <body>
     <div class="wrapper">
+        <div id="modal_edit_box" class="modal_edit_box">
+            <div class="modal_edit_box_input"><textarea id="modal_edit_text" rows="5" cols="50"
+                    placeholder="내용....."></textarea>
+                <button id="modal_edit_button" class="modal_edit_button">수정</button>
+                <button onclick="modal_edit_cancel()" id="modal_edit_cancel" class="modal_edit_cancel">취소</button>
+            </div>
+        </div>
+
         <nav id="bar-nav">
             <script>$("#bar-nav").load("nav.html");</script>
         </nav>
@@ -50,20 +61,19 @@
                     <div class="user_box">
                         <div class="main_user_profile">
                             <div class="user_img_box" onclick="showPiChange()">
-                                <img id="user_profile_img"
-                                    src="">
+                                <img id="user_profile_img" src="">
                             </div>
                             <div class="username_box">
                                 <span class="username" id="username">
-                                </span>	&nbsp;	&nbsp;
+                                </span> &nbsp; &nbsp;
                                 <button id="submitLoc" onclick="submitLoc()">내 위치 저장</button>
-                                <button id="change_introduction" class="change_introduction" onclick="" >소개글 변경</button>
+                                <button id="change_introduction" class="change_introduction" onclick="">소개글 변경</button>
                             </div>
                         </div>
                         <div class="user_introduction" id="user_introduction">
                             <div id="introduction" class="introduction">
                             </div>
-                            <textarea id="change_intro_input" type="textarea" value="" ></textarea>
+                            <textarea id="change_intro_input" type="textarea" value=""></textarea>
                             <!-- <input id="change_intro_input" type="textarea" value="" /> -->
                             <!-- <button id="change_intro_button" type="button" onclick="changeIntoriduction()">저장</button> -->
                         </div>
@@ -112,9 +122,7 @@
             <button onclick="" type="button" class="upload_pi_modal_btn" id="upload_pi_modal_btn">
                 <i class="fa-solid fa-camera"></i>
             </button>
-            <img id="preview_profile_img" class="preview_profile_img"
-                src=""
-                alt="" srcset="">
+            <img id="preview_profile_img" class="preview_profile_img" src="" alt="" srcset="">
             <button type="button" id="change_pi_button">
                 저장
             </button>
@@ -145,7 +153,8 @@
                 <div class="add_pet_profile_box_l">
                     <div class="add_pet_profile_img">
                         <input type="file" multiple accept="image/*" id="add_pi_file">
-                        <button onclick="uploadPetProfileImg()" type="button" class="add_pi_modal_btn" id="add_pi_modal_btn">
+                        <button onclick="uploadPetProfileImg()" type="button" class="add_pi_modal_btn"
+                            id="add_pi_modal_btn">
                             <i class="fa-solid fa-camera"></i>
                         </button>
                         <img id="add_pet_profile_image" src="" />
@@ -204,67 +213,56 @@
         </div>
     </div>
 
-    <!-- 디테일 모달 -->
+    <!-- 상세 모달 -->
     <div id="modal_box" class="modal_box">
         <div class="modal_content">
-            <div class="modal_img_box" style="width:220%">
+            <div class="modal_img_box">
                 <img id="modal_box_img"
-                    src="https://cdn.pixabay.com/photo/2017/09/25/13/12/cocker-spaniel-2785074__480.jpg" alt=""
-                    style="width: 100%;">
+                    src="https://cdn.pixabay.com/photo/2017/09/25/13/12/cocker-spaniel-2785074__480.jpg" alt="">
                 <div id="slide_left" class="slide_left"><i class="fa-solid fa-caret-left"></i></div>
                 <div id="slide_right" class="slide_right"><i class="fa-solid fa-caret-right"></i></div>
                 <div id="like_user_list" class="like_user_list">
                     <h4>좋아요 없음</h4>
                 </div>
             </div>
-            <div id="like_icon_on" class="like_icon_on" style="display:flex"><i class="fa-solid fa-heart"></i><span
-                    id="modal_like_num1"> 45</span></div>
-            <div id="like_icon_off" class="like_icon_off"><i class="fa-regular fa-heart"></i><span id="modal_like_num2">
-                    45</span></div>
+            <div id="like_icon_on" class="like_icon_on"><i class="fa-solid fa-heart"></i><span>45</span></div>
+            <div id="like_icon_off" class="like_icon_off"><i class="fa-regular fa-heart"></i><span>45</span></div>
             <div id="heart_ani" class="heart_ani"><i class="fa-solid fa-heart"></i></div>
-
             <div id="modal_desc" class="modal_desc">
-                <div id="article_delete" class="article_delete" onclick="articleDelete()"><i
-                        class="fa-solid fa-trash"></i></div>
-                <div id="article_edit" class="article_edit" onclick="articleEdit()"><i
-                        class="fa-solid fa-pen-to-square"></i></div>
+                <div id="article_delete" class="article_delete"><i class="fa-solid fa-trash"></i></div>
+                <div id="article_edit" class="article_edit"><i class="fa-solid fa-pen-to-square"></i></div>
                 <div class="modal_user_profile">
-                    <img id="author_profile_img" src="" alt="" srcset="">
-                    <div id="author">유저</div>
-                    <div id="modal_follow" class="follow" onclick="Follow(user,article)">팔로우</div>
+                    <img src="https://cdn.pixabay.com/photo/2017/09/25/13/12/cocker-spaniel-2785074__480.jpg" alt=""
+                        srcset="">
+                    <div id="modal_username" class="modal_username">강아지 사육사</div>
+                    <div id="modal_follow" class="follow">팔로우</div>
+                    <div id="modal_follow_count" class="follow" style="background-color: blue;">12</div>
                 </div>
                 <div id="modal_content_list" class="modal_content_list">
-                    <div id="content">
+                    <div id="modal_content_text">
                     </div>
                 </div>
-                <div id="mypage_modal_comment_list" class="modal_comment_list">
+                <div class="modal_comment_list" id="modal_comment_list">
                 </div>
-                <div class="modal_comment_input">
+                <div id="modal_comment_input" class="modal_comment_input">
                     <textarea id="modal_comment_text" name="" id="" placeholder="댓글....."></textarea>
-                    <div id="modal_comment_submit" class="modal_comment_submit" onclick="sendComment()">전송</div>
+                    <div id="modal_comment_submit" class="modal_comment_submit">전송</div>
                 </div>
             </div>
         </div>
     </div>
 
-    <!--------edit------------>
-    <div id="modal_edit_box" class="modal_edit_box">
-        왜 이거 안보임??
-        <div class="modal_edit_box_input"><textarea id="modal_edit_text" rows="5" cols="50"
-                placeholder="내용....."></textarea>
-            <button id="modal_edit_button" class="modal_edit_button">수정</button>
-            <button onclick="modal_edit_cancel()" id="modal_edit_cancel" class="modal_edit_cancel">취소</button>
-        </div>
-    </div>
-
 
     <!------JS---------->
-    <script src="./static/js/urls.js"></script>
-    <script src="./static/js/hashtag.js"></script>
     <script src="./static/js/api.js"></script>
+    <script src="./static/js/user_api.js"></script>
+    <script src="./static/js/article.js"></script>
     <script src="./static/js/mypage.js"></script>
-    <script src="./static/js/detailmodal.js"></script>
-    <script src="./static/js/search.js"></script>
+    <script src="./static/js/hashtag.js"></script>
+    <script src="/static/js/main_script.js"></script>
+
+    <!-- <script src="./static/js/detailmodal.js"></script> -->
+    <!-- <script src="./static/js/search.js"></script> -->
 </body>
 
 </html>
