fix result.js 통합

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
         <div class="modal_content">
             <div class="modal_img_box">
                 <img id="modal_box_img"
-                    src="https://cdn.pixabay.com/photo/2017/09/25/13/12/cocker-spaniel-2785074__480.jpg" alt="">
+                    src="https://mblogthumb-phinf.pstatic.net/20161008_248/sasa9508_1475929220263OMzsO_JPEG/2.jpg?type=w2"
+                    alt="">
                 <div id="slide_left" class="slide_left"><i class="fa-solid fa-caret-left"></i></div>
                 <div id="slide_right" class="slide_right"><i class="fa-solid fa-caret-right"></i></div>
                 <div id="like_user_list" class="like_user_list">
@@ -68,8 +69,8 @@
                 <div class="modal_user_profile">
                     <img src="https://cdn.pixabay.com/photo/2017/09/25/13/12/cocker-spaniel-2785074__480.jpg" alt=""
                         srcset="">
-                    <div id="modal_username" class="modal_username">강아지 사육사</div>
-                    <div id="modal_follow" class="follow">팔로우</div>
+                    <div id="modal_username" class="modal_username">로딩중</div>
+                    <div id="modal_follow" class="follow">로딩중</div>
                     <div id="modal_follow_count" class="follow" style="background-color: blue;">12</div>
                 </div>
                 <div id="modal_content_list" class="modal_content_list">
