--- a/search_result.html
+++ b/search_result.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="/static/css/hashtag.css">
     <link rel="stylesheet" href="/static/css/search.css">
     <link rel="stylesheet" href="/static/css/layout.css">
+    <link rel="stylesheet" href="/static/css/modal.css">
+    <link rel="stylesheet" href="/static/css/nav.css">
+
+
     <script src="https://kit.fontawesome.com/0e01622099.js" crossorigin="anonymous"></script>
     <title>검색 결과|Petrasche</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -148,6 +152,7 @@
         <script src="./static/js/urls.js"></script>
         <script src="/static/js/hashtag.js"></script>
         <script src="/static/js/search_result.js"></script>
+        <script src="./static/js/article.js"></script>
         <script src="/static/js/main_script.js"></script>
         <script src="./static/js/search.js"></script>
 </body>
