fix 모바일 메뉴 추가, 업로드창 크기 반응형으로 변경

--- a/index.html
+++ b/index.html
@@ -151,7 +151,16 @@
                 </div>
             </div>
 
+           
             <div class="right_section">
+
+                <div class="mobile_menu">
+                    <div onclick="GetSelectPetArticle(1)"><i class="fa-solid fa-dog"></i> 댕댕이</div>
+                    <div onclick="GetSelectPetArticle(2)"><i class="fa-solid fa-cat"></i> 냥냥이</div>
+                    <div onclick="upload_modal_open()"><i class="fa-solid fa-camera"></i> 업로드</div>
+                 </div>
+     
+
                 <h1 class="top_title">인기 게시물</h1>
                 <div id="top_article" class="top_article">
                 </div>
