--- a/login.html
+++ b/login.html
@@ -47,6 +47,7 @@
     <script src="./static/js/urls.js"></script>
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>  
     <script src="./static/js/kakao.js"></script>
+    <script src="./static/js/user_api.js"></script>
     <script>
 
     </script>
