--- a/tournament.html
+++ b/tournament.html
@@ -163,6 +163,7 @@
         <script src="./static/js/urls.js"></script>
         <script src="/static/js/refresh.js"></script>
         <script src="/static/js/hashtag.js"></script>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
         <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
         <script src="./static/js/kakao.js"></script>
         <script src="./static/js/tournament.js"></script>
