fix - walk페이지에서 모달에디트 박스 지움

--- a/walk.html
+++ b/walk.html
@@ -51,13 +51,13 @@
             <a href="/signup.html">계정이 없으신가요? 회원가입</a>
         </div>
     </div>
-    <div id="modal_edit_box" class="modal_edit_box">
+    <!-- <div id="modal_edit_box" class="modal_edit_box">
         <div class="modal_edit_box_input"><textarea id="modal_edit_text" rows="5" cols="50"
                 placeholder="내용....."></textarea>
             <button id="modal_edit_button" class="modal_edit_button">수정</button>
             <button onclick="modal_edit_cancel()" id="modal_edit_cancel" class="modal_edit_cancel">취소</button>
         </div>
-    </div>
+    </div> -->
 
 
     <!-- 상단 메뉴바 -->
