fix - sweetalert js를 html에 삽입. 근데 이거 nav.html에만 넣으면 다 되는건 아니겠죠?

--- a/search_result.html
+++ b/search_result.html
@@ -149,6 +149,7 @@
             </div>
 
         </div>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
         <script src="./static/js/urls.js"></script>
         <script src="/static/js/hashtag.js"></script>
         <script src="/static/js/search_result.js"></script>
