--- a/walk.html
+++ b/walk.html
@@ -416,6 +416,7 @@
         }
 
     </script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <script type="text/javascript"
         src='//dapi.kakao.com/v2/maps/sdk.js?appkey=b1ae05cf3f44682ccf7ffba8606235b3&libraries=services'></script>
