--- a/dm.html
+++ b/dm.html
@@ -113,6 +113,7 @@
 </body>
 
 </html>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script src="/static/js/dmapi.js"></script>
 <script src="./static/js/urls.js"></script>
 <script src="./static/js/search.js"></script>
