--- a/mypage.html
+++ b/mypage.html
@@ -254,6 +254,7 @@
 
 
     <!------JS---------->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="./static/js/api.js"></script>
     <script src="./static/js/user_api.js"></script>
     <script src="./static/js/article.js"></script>
