--- a/personal.html
+++ b/personal.html
@@ -141,6 +141,7 @@
 
 
     <!------JS---------->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="./static/js/urls.js"></script>
     <script src="./static/js/api.js"></script>
     <script src="./static/js/hashtag.js"></script>
