--- a/signup.html
+++ b/signup.html
@@ -129,6 +129,7 @@
                 document.getElementById('signup').style.display = "flex"
             }
         </script>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
         <script src="./static/js/urls.js"></script>
         <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
         <script src="./static/js/kakao.js"></script>
